discussion/kv_engine/182820/182820_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

Merge commit '705e5c7f8' into 'couchbase/master'

No changes from

daemon/protocol/mcbp/sasl_auth_command_context.cc

Only the test is merged forward

tests/testapp/testapp_sasl.cc

* commit '705e5c7f8':
  MB-52143: Reject SaslStep if not preceded by SaslAuth

Change-Id: I15bae5537dc2e2288d9930c0a8e3b58a86e3f270

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-11-16 15:17:13.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-11-16 15:32:44.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21868/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp/testapp_sasl.cc:259:10: error: use of undeclared identifier "isSupported" [clang-diagnostic-error]
    if (!isSupported("SCRAM-SHA1")) {
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp/testapp_sasl.cc:266:15: error: no member named "client" in namespace "cb::sasl" [clang-diagnostic-error]
    cb::sasl::client::ClientContext client([username] { return username; },
              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp/testapp_sasl.cc:269:24: error: use of undeclared identifier "client" [clang-diagnostic-error]
    auto client_data = client.start();
                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp/testapp_sasl.cc:271:40: error: no member named "Error" in namespace "cb::sasl" [clang-diagnostic-error]
    if (client_data.first != cb::sasl::Error::OK) {
                                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp/testapp_sasl.cc:273:46: error: use of undeclared identifier "client" [clang-diagnostic-error]
                                 std::string(client.getName()) +
                                             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp/testapp_sasl.cc:279:30: error: use of undeclared identifier "client" [clang-diagnostic-error]
    stepCommand.setMechanism(client.getName());
                             ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21868/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp/testapp_sasl.cc:259:10:
error: use of undeclared identifier "isSupported" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21868/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51146/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/tests/testapp/testapp_sasl.cc(259): error C3861: "isSupported": identifier not found ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51146/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11596/ : FAILURE

Compile error at [2022-11-16T15:22:54.989Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/tests/testapp/testapp_sasl.cc:259:10:
error: use of undeclared identifier "isSupported"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11596/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/625/ : FAILURE

Compile error at [2022-11-16T15:30:48.461Z] /home/couchbase/jenkins/workspace/kv_engine.linux-debug_master/kv_engine/tests/testapp/testapp_sasl.cc:259:10:
error: ?isSupported? was not declared in this scope
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/625/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11686/ : FAILURE

Compile error at [2022-11-16T15:27:59.513Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/tests/testapp/testapp_sasl.cc:259:10:
error: ?isSupported? was not declared in this scope
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11686/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25172/ : FAILURE

Compile error at [2022-11-16T15:20:43.146Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/tests/testapp/testapp_sasl.cc:259:10:
error: use of undeclared identifier "isSupported"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25172/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23915/ : FAILURE

Compile error at [2022-11-16T15:22:16.757Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/tests/testapp/testapp_sasl.cc:259:10:
error: ?isSupported? was not declared in this scope
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23915/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24328/ : FAILURE

Compile error at [2022-11-16T15:25:32.724Z] ../kv_engine/tests/testapp/testapp_sasl.cc:259:10:
error: ?isSupported? was not declared in this scope
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24328/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23372/ : FAILURE

Compile error at [2022-11-16T15:28:49.991Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master_2/kv_engine/tests/testapp/testapp_sasl.cc:259:10:
error: use of undeclared identifier "isSupported"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23372/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32333/ : FAILURE

Compile error at [2022-11-16T15:23:29.753Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/tests/testapp/testapp_sasl.cc:259:10:
error: use of undeclared identifier "isSupported"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32333/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42923/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/21223/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
